fix the subscription enticement box on mobile

--- a/app/assets/stylesheets/layouts/_wrapper.sass
+++ b/app/assets/stylesheets/layouts/_wrapper.sass
@@ -1,7 +1,7 @@
 .wrapper[role=layout]
   &.-container
-    margin-left: 2vw
-    margin-right: 2vw
+    margin-left: 2rem
+    margin-right: 2rem
     max-width: 100vw
     @media screen and (min-width: $large)
       margin-left: 3vw
